[package]
name = "todo_list"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1", features = ["full"] }
prost = "0.12.3"
tonic-reflection = "0.11" 
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
chrono = "0.4.39"
dashmap = { version = "6.0.1", features = ["serde"] }

[build-dependencies]
tonic-build = "0.11.0"

